Updated dependencies to explicitly require requests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ packages = [
 python = ">=3.11, <4.0"
 adalflow = { path = "adalflow", develop = true }
 openai = "^1.34.0"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.dev.dependencies]
