--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -92,6 +92,7 @@ tensorboardx = "^2.6.2.2"
 matplotlib = "^3.9.1"
 azure-identity = "^1.18.0"
 azure-core = "^1.31.0"
+pyvis = "^0.3.2"
 
 
 [tool.poetry.group.extra.dependencies]
