Add write permissions to architecture workflow

--- a/.github/workflows/architecture.yml
+++ b/.github/workflows/architecture.yml
@@ -5,6 +5,9 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
