--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "adalflow"
 
-version = "0.2.6"
+version = "0.2.7"
 description = "The Library to Build and Auto-optimize LLM Applications"
 authors = ["Li Yin <li@sylphai.com>"]
 readme = "README.md"
 repository = "https://github.com/SylphAI-Inc/AdalFlow"
-
 license = "MIT"
-maintainers = ["Li Yin <li@sylphai.com>"]
+
+maintainers = ["Li Yin <li@sylphai.com>", "Filip Makraduli <filip@sylphai.com>"]
 classifiers = [
     "Topic :: Software Development :: Build Tools",
     "Topic :: Software Development :: Libraries :: Python Modules",
@@ -36,35 +36,30 @@ python-dotenv = "^1.0.1"
 backoff = "^2.2.1"
 jinja2 = "^3.1.3"
 jsonlines = "^4.0.0"
-tiktoken = "^0.7.0"
-numpy = "^1.26.4"
+tiktoken = ">=0.3.3"
+numpy = "*"
 tqdm = "^4.66.4"
-pyyaml = "^6.0.1"
+PyYAML = ">=6.0.1"
 nest-asyncio = "^1.6.0"
 colorama = "^0.4.6"
-botocore = "^1.34.149"   # if not specified, it will fail to resolve the dependency, we need to figure out a way to get rid of botocore dependency
 diskcache = "^5.6.3"
 
 
 # Optional dependencies
-openai = { version = "^1.12.0", optional = true }
-groq = { version = "^0.9.0", optional = true }
-faiss-cpu = { version = "^1.8.0", optional = true }
-sqlalchemy = { version = "^2.0.30", optional = true }
-pgvector = { version = "^0.3.1", optional = true }
-torch = { version = "^2.3.1", optional = true }
-anthropic = { version = "^0.31.1", optional = true }
-google-generativeai = { version = "^0.7.2", optional = true }
-cohere = { version = "^5.5.8", optional = true }
-ollama = { version = "^0.2.1", optional = true }
-lancedb = { version = "^0.5.2", optional = true }
-
-
+openai = { version = ">=1.12.0", optional = true }
+groq = { version = ">=0.9.0", optional = true }
+faiss-cpu = { version = ">=1.8.0", optional = true }
+sqlalchemy = { version = ">=2.0.30", optional = true }
+pgvector = { version = ">=0.3.1", optional = true }
+torch = { version = ">=2.3.1", optional = true }
+anthropic = { version = ">=0.31.1", optional = true }
+google-generativeai = { version = ">=0.7.2", optional = true }
+cohere = { version = ">=5.5.8", optional = true }
+ollama = { version = ">=0.2.1", optional = true }
+lancedb = { version = ">=0.5.2", optional = true }
 # Azure dependencies
-azure-core = { version = "^1.24.0", optional = true }
-azure-identity = { version = "^1.12.0", optional = true }
-# azure-ai-formrecognizer = { version = "^3.2.0", optional = true }
-# azure-ai-textanalytics = { version = "^5.3.0", optional = true }
+azure-core = { version = ">=1.24.0", optional = true }
+azure-identity = { version = ">=1.12.0", optional = true }
 
 # amazon bedrock
 boto3 = { version = "^1.35.19", optional = true }
@@ -80,7 +75,13 @@ groq = "^0.9.0"
 google-generativeai = "^0.7.2"
 anthropic = "^0.31.1"
 lancedb = "^0.5.2"
+boto3 = "^1.35.19"
 
+# TODO: cant make qdrant work here
+# qdrant_client = [
+#     { version = ">=1.12.2,<2.0.0", optional = true, markers = "python_version >= '3.10'" },
+#     { version = ">=1.8.0,<1.12.2", optional = true, markers = "python_version < '3.10'" },
+# ]
 
 
 [tool.poetry.group.typing.dependencies]
@@ -103,17 +104,14 @@ pyvis = "^0.3.2"
 datasets = "^2.21.0"
 
 [tool.poetry.extras] # allow pip install adalflow[openai, groq]
+
+# model providers
 openai = ["openai"]
 groq = ["groq"]
 anthropic = ["anthropic"]
 cohere = ["cohere"]
 google-generativeai = ["google-generativeai"]
-pgvector = ["pgvector"]
-faiss-cpu = ["faiss-cpu"]
-sqlalchemy = ["sqlalchemy"]
-torch = ["torch"]
 ollama = ["ollama"]
-lancedb = ["lancedb"]
 azure = [
     "azure-core",
     "azure-identity",
@@ -122,7 +120,21 @@ azure = [
 ]
 
 bedrock = ["boto3"]
+
+# vector dbs
+lancedb = ["lancedb"]
+pgvector = ["pgvector"]
+# qdrant = ["qdrant-client"]
+
 datasets = ["datasets"]
+
+# similarity search local
+faiss-cpu = ["faiss-cpu"]
+torch = ["torch"]
+
+# data modeling
+sqlalchemy = ["sqlalchemy"]
+
 
 [[tool.poetry.source]]
 name = "nvidia-pypi"
