--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -77,11 +77,13 @@ anthropic = "^0.31.1"
 lancedb = "^0.5.2"
 boto3 = "^1.35.19"
 
+
 # TODO: cant make qdrant work here
 # qdrant_client = [
 #     { version = ">=1.12.2,<2.0.0", optional = true, markers = "python_version >= '3.10'" },
 #     { version = ">=1.8.0,<1.12.2", optional = true, markers = "python_version < '3.10'" },
 # ]
+botocore = "^1.36.8"
 
 
 [tool.poetry.group.typing.dependencies]
