--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "adalflow"
 
-version = "0.2.7"
+version = "1.0.0.beta.1"
 description = "The Library to Build and Auto-optimize LLM Applications"
 authors = ["Li Yin <li@sylphai.com>"]
 readme = "README.md"
