--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -63,6 +63,7 @@ azure-identity = { version = ">=1.12.0", optional = true }
 
 # amazon bedrock
 boto3 = { version = "^1.35.19", optional = true }
+together = "^1.3.14"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.1.1"
