--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -58,10 +58,12 @@ cohere = { version = ">=5.5.8", optional = true }
 ollama = { version = ">=0.2.1", optional = true }
 lancedb = { version = ">=0.5.2", optional = true }
 # Azure dependencies
+
 azure-core = { version = ">=1.24.0", optional = true }
 azure-identity = { version = ">=1.12.0", optional = true }
-
 # amazon bedrock
+together = { version = ">=1.3.14", optional = true }
+
 boto3 = { version = "^1.35.19", optional = true }
 
 [tool.poetry.group.test.dependencies]
@@ -122,6 +124,8 @@ azure = [
 ]
 
 bedrock = ["boto3"]
+
+together = ["together"]
 
 # vector dbs
 lancedb = ["lancedb"]
