--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -67,8 +67,8 @@ together = { version = ">=1.3.14", optional = true }
 boto3 = { version = "^1.35.19", optional = true }
 
 [tool.poetry.group.test.dependencies]
-pytest = "^8.1.1"
-pytest-mock = "^3.14.0"
+pytest = ">=8.1.1"
+pytest-mock = ">=3.14.0"
 torch = "^2.3.1"
 ollama = "^0.2.1"
 faiss-cpu = "^1.8.0"
