--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,10 @@ google-generativeai = "^0.8.3"
 together = "^1.3.14"
 
 
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.4"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
