--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "adalflow"
-version = "1.0.3"
+version = "1.0.4"
 description = "The Library to Build and Auto-optimize LLM Applications"
 authors = ["Li Yin <li@sylphai.com>"]
 readme = "README.md"
@@ -36,7 +36,7 @@ jsonlines = "^4.0.0"
 tiktoken = ">=0.3.3"
 numpy = [
     { version = "<2.1.0", markers = "python_version < '3.10'" },
-    { version = "*", markers = "python_version >= '3.10'" }
+    { version = "*", markers = "python_version >= '3.10'" },
 ]
 tqdm = "^4.66.4"
 PyYAML = ">=6.0.1"
@@ -105,10 +105,7 @@ anthropic = ["anthropic"]
 cohere = ["cohere"]
 google-generativeai = ["google-generativeai"]
 ollama = ["ollama"]
-azure = [
-    "azure-core",
-    "azure-identity"
-]
+azure = ["azure-core", "azure-identity"]
 bedrock = ["boto3"]
 together = ["together"]
 mistralai = ["mistralai"]
@@ -139,5 +136,5 @@ exclude = ["images"]
 lint.extend-ignore = [
     "E402",  # Ignore module-level import issues
     "E731",
-    "UP007"  # Disable warning for Union types formatting in Python 3.8
+    "UP007", # Disable warning for Union types formatting in Python 3.8
 ]
