--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -60,6 +60,7 @@ azure-core = { version = ">=1.24.0", optional = true }
 azure-identity = { version = ">=1.12.0", optional = true }
 together = { version = ">=1.3.14", optional = true }
 boto3 = { version = "^1.35.19", optional = true }
+mcp = { version = "^1.9.4", optional = true, markers = "python_version >= '3.10'" }
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.4"
@@ -74,6 +75,7 @@ anthropic = "^0.31.1"
 lancedb = "^0.5.2"
 boto3 = "^1.35.19"
 pydantic = ">=2.10.0,<2.11.0"
+mcp = { version = "^1.9.4", markers = "python_version >= '3.10'" }
 
 [tool.poetry.group.qdrant.dependencies]
 # Group dependencies are inherently optional, so `optional = true` isn't strictly needed
@@ -117,6 +119,7 @@ datasets = ["datasets"]
 faiss-cpu = ["faiss-cpu"]
 torch = ["torch"]
 sqlalchemy = ["sqlalchemy"]
+mcp = ["mcp"]
 
 [[tool.poetry.source]]
 name = "nvidia-pypi"
