fix an examples bug, and add more tests on mcp tool, add mcp example using npx file ops

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ google-generativeai = "^0.8.3"
 together = "^1.3.14"
 mistralai = "1.5.0"
 fireworks-ai = "0.15.12"
+mcp = "^1.9.4"
 
 
 [build-system]
