--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -62,6 +62,7 @@ together = { version = ">=1.3.14", optional = true }
 boto3 = { version = "^1.35.19", optional = true }
 mcp = { version = "^1.9.4", optional = true, markers = "python_version >= '3.10'" }
 pytest-asyncio = "^1.0.0"
+asyncstdlib = "^3.13.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.4"
