--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -98,6 +98,8 @@ matplotlib = "^3.9.1"
 azure-identity = "^1.18.0"
 azure-core = "^1.31.0"
 pyvis = "^0.3.2"
+uvicorn = "^0.35.0"
+fastapi = "^0.116.1"
 
 [tool.poetry.group.extra.dependencies]
 datasets = "^2.21.0"
