improve the conversation memory, and ensure we can use mlflow tracing even without the global os environment variable

--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -23,6 +23,7 @@ include = [
     "adalflow/utils/*",
     "adalflow/tracing/*",
     "adalflow/optim/*",
+    "adalflow/apps/*",
 ]
 
 packages = [{ include = "adalflow", from = "." }]
