Update docs based on feedback

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ asyncstdlib = "^3.13.1"
 dspy = "^2.6.27"
 dspy-ai = "^2.6.27"
 mlflow = "^3.1.4"
+aioconsole = "^0.8.1"
 
 [tool.poetry.group.dev.dependencies]
 
