--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -16,6 +16,7 @@ pyvis = "^0.3.2"
 sphinx-tabs = "^3.4.7"
 furo = "^2024.8.6"
 sphinxcontrib-mermaid = "^1.0.0"
+sphinx-copybutton = "^0.5.2"
 
 [tool.poetry.group.doc.dependencies]
 # Sphinx documentation dependencies
