--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ packages = [
 # if you cant import package, use export PYTHONPATH=$(pwd):$PYTHONPATH
 
 [tool.poetry.dependencies]
-python = ">=3.11, <3.13"
+python = ">=3.11, <4.0"
 adalflow = { path = "adalflow", develop = true }
 black = { extras = ["jupyter"], version = "^24.10.0" }
 aioitertools = "^0.12.0"
@@ -39,8 +39,8 @@ torch = ">=2.0, <3.0"
 textgrad = "^0.1.4"
 tensorboardx = "^2.6.2.2"
 tensorboard = "^2.17.0"
-dspy = "^2.6.27"
-dspy-ai = "^2.6.27"
+dspy = { version = "^2.6.27", markers = "python_version < '3.14'" }
+dspy-ai = { version = "^2.6.27", markers = "python_version < '3.14'" }
 mlflow = "^3.1.4"
 aioconsole = "^0.8.1"
 
