--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,11 @@ adalflow = { path = "adalflow", develop = true }
 black = { extras = ["jupyter"], version = "^24.10.0" }
 aioitertools = "^0.12.0"
 asyncstdlib = "^3.13.1"
+boto3 = "^1.39.15"
+azure-identity = "^1.23.1"
+azure-core = "^1.35.0"
+azure-ai-formrecognizer = "^3.3.3"
+azure-ai-textanalytics = "^5.3.0"
 
 [tool.poetry.group.dev.dependencies]
 
