--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "adalflow"
-version = "1.0.5a1"
+version = "1.1.0"
 description = "The Library to Build and Auto-optimize LLM Applications"
 authors = ["Li Yin <li@sylphai.com>"]
 readme = "README.md"
