--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -31,6 +31,7 @@ packages = [{ include = "adalflow", from = "." }]
 [tool.poetry.dependencies]
 python = ">=3.9, <4.0"
 python-dotenv = "^1.0.1"
+pydantic = ">=2.0.0"
 backoff = "^2.2.1"
 jinja2 = "^3.1.3"
 jsonlines = "^4.0.0"
