--- a/adalflow/pyproject.toml
+++ b/adalflow/pyproject.toml
@@ -45,6 +45,7 @@ PyYAML = ">=6.0.1"
 nest-asyncio = "^1.6.0"
 colorama = "^0.4.6"
 diskcache = "^5.6.3"
+filelock = "^3.12.0"
 
 # Optional dependencies for the library:
 openai = { version = ">=1.97.1", optional = true }
