--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,11 @@ openai = "^1.97.1"
 openai-agents = "^0.0.19"
 
 
+
+[tool.poetry.group.test.dependencies]
+pytest-mock = "^3.15.1"
+lancedb = "^0.25.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
